--- a/src/CryTraCtor.WebApp/Components/Layout/NavMenu.razor
+++ b/src/CryTraCtor.WebApp/Components/Layout/NavMenu.razor
@@ -5,6 +5,8 @@
     
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
 
+    <MudNavLink Href="files" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Files</MudNavLink>
+
 </MudNavMenu>
 
 
