feat: expect pcap file extension on upload

--- a/src/CryTraCtor.WebApp/Components/Pages/Files.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/Files.razor
@@ -9,7 +9,7 @@
 
 <MudPaper Class="pa-4 mb-4">
     <InputFile id="file-upload" OnChange="OnInputFileChange" class="d-none"
-               accept=".txt,.pdf,.doc,.docx,.xls,.xlsx,.csv,.json,.xml"/>
+               accept=".pcap,.pcapng,.cap"/>
     <MudButton HtmlTag="label"
                Variant="Variant.Filled"
                Color="Color.Primary"
