feat: add status page

--- a/src/CryTraCtor.WebApp/Components/Layout/NavMenu.razor
+++ b/src/CryTraCtor.WebApp/Components/Layout/NavMenu.razor
@@ -2,5 +2,6 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
 
     <MudNavLink Href="files" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Files</MudNavLink>
+    <MudNavLink Href="status" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MonitorHeart">Status</MudNavLink>
 
 </MudNavMenu>
