feat: add KnownDomains and CryptoProducts pages

--- a/src/CryTraCtor.WebApp/Components/Pages/Home.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/Home.razor
@@ -24,7 +24,7 @@
             <MudPaper Class="pa-4" Elevation="3">
                 <MudText Typo="Typo.h5" GutterBottom="true">Known Domains</MudText>
                 <MudText Typo="Typo.body2" Class="mb-4">View and manage the list of known domain names associated with cryptocurrency services.</MudText>
-                <MudButton Variant="Variant.Filled" Color="Color.Secondary" Href="/known-domains" FullWidth="true" Disabled="true">Manage Domains</MudButton> @* Disabled until page exists *@
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/known-domains" FullWidth="true">Manage Domains</MudButton>
             </MudPaper>
         </MudItem>
 
@@ -32,7 +32,7 @@
             <MudPaper Class="pa-4" Elevation="3">
                 <MudText Typo="Typo.h5" GutterBottom="true">Crypto Products</MudText>
                 <MudText Typo="Typo.body2" Class="mb-4">Manage the list of cryptocurrency products (wallets, exchanges, etc.) tracked by the system.</MudText>
-                <MudButton Variant="Variant.Filled" Color="Color.Secondary" Href="/crypto-products" FullWidth="true" Disabled="true">Manage Products</MudButton> @* Disabled until page exists *@
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/crypto-products" FullWidth="true">Manage Products</MudButton>
             </MudPaper>
         </MudItem>
     </MudGrid>
