feat: add cumulative dns statistics

--- a/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipants.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipants.razor
@@ -14,6 +14,8 @@
     <Columns>
         <PropertyColumn Property="x => x.Address" Title="Address"/>
         <PropertyColumn Property="x => x.Port" Title="Port"/>
+        <PropertyColumn Property="x => x.OutgoingDnsCount" Title="Outgoing DNS"/>
+        <PropertyColumn Property="x => x.IncomingDnsCount" Title="Incoming DNS"/>
     </Columns>
 </MudDataGrid>
 
