--- a/src/CryTraCtor.WebApp/Components/Pages/FileAnalysis.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/FileAnalysis.razor
@@ -3,10 +3,12 @@
 @using CryTraCtor.Business.Facades.Interfaces
 @using CryTraCtor.Business.Models.FileAnalysis
 @using CryTraCtor.Business.Services
+@using CryTraCtor.WebApp.Services
 @inject IFileAnalysisFacade FileAnalysisFacade
 @inject FileAnalysisService FileAnalysisService
 @inject ISnackbar Snackbar
 @inject NavigationManager NavigationManager
+@inject IBreadcrumbService BreadcrumbService
 
 <h3>File Analysis</h3>
 
@@ -42,6 +44,13 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var breadcrumbs = new List<BreadcrumbItem>
+        {
+            new BreadcrumbItem("Files", href: "/files"),
+            new BreadcrumbItem("File Analysis", href: null, disabled: true)
+        };
+        BreadcrumbService.SetBreadcrumbs(breadcrumbs);
+
         await LoadAnalysesAsync();
     }
 
