--- a/src/CryTraCtor.WebApp/Components/Pages/Home.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/Home.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 
 @using MudBlazor
+@using CryTraCtor.WebApp.Services
+@inject IBreadcrumbService BreadcrumbService
 
 <PageTitle>CryTraCtor Home</PageTitle>
 
@@ -38,3 +40,14 @@
     </MudGrid>
 
 </MudContainer>
+
+@code {
+    protected override void OnInitialized()
+    {
+        var breadcrumbs = new List<BreadcrumbItem>
+        {
+            new BreadcrumbItem("Home", href: "/", disabled: true)
+        };
+        BreadcrumbService.SetBreadcrumbs(breadcrumbs);
+    }
+}
