--- a/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
@@ -4,8 +4,10 @@
 @using CryTraCtor.Business.Models.KnownDomain
 @using CryTraCtor.WebApp.Options
 @using Microsoft.Extensions.Options
+@using CryTraCtor.WebApp.Services
 @inject IKnownDomainImportFacade KnownDomainImportFacade
 @inject IKnownDomainFacade KnownDomainFacade
+@inject IBreadcrumbService BreadcrumbService
 @inject Business.Services.CsvService CsvService
 @inject ISnackbar Snackbar
 @inject IOptions<FileUploadOptions> FileUploadOptions
@@ -59,6 +61,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var breadcrumbs = new List<BreadcrumbItem>
+        {
+            new BreadcrumbItem("Known Domains", href: "/known-domains", disabled: true)
+        };
+        BreadcrumbService.SetBreadcrumbs(breadcrumbs);
+
         if (RendererInfo.IsInteractive)
         {
             _elements = (await KnownDomainFacade.GetAllDetailAsync()).ToList();
