--- a/src/CryTraCtor.WebApp/Components/Pages/DnsPacketsByParticipant.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/DnsPacketsByParticipant.razor
@@ -11,6 +11,13 @@
 @inject ISnackbar Snackbar
 @inject IBreadcrumbService BreadcrumbService
 
+<MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined" Class="mb-4">
+    <MudButton StartIcon="@Icons.Material.Filled.Dns" Disabled="true">DNS Overview</MudButton>
+    <MudButton StartIcon="@Icons.Material.Filled.ListAlt"
+               Href="@($"/files/{FileId}/file-analysis/{FileAnalysisId}/traffic-participants/{ParticipantId}/known-domains")">
+        Known Domains Summary
+    </MudButton>
+</MudButtonGroup>
 <h3>DNS Packets for Participant @(_participant?.Address):@(_participant?.Port)</h3>
 
 <h4>DNS Transactions</h4>
